--- a/projeto-curriculo/index.html
+++ b/projeto-curriculo/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
@@ -16,16 +16,20 @@
       <img src="./assets/logo.svg" alt="logo-GustavoAvelar" />
       <nav aria-label="primária">
         <ul class="menu">
-          <li><a href="">Home</a></li>
-          <li><a href="">About</a></li>
-          <li><a href="">Skills</a></li>
-          <li><a href="">Projects</a></li>
-          <li><a href="">Contact</a></li>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#AboutMe">About</a></li>
+          <li><a href="#HardSkills">Skills</a></li>
+          <li><a href="#Projects">Projects</a></li>
+          <li><a href="#Contact">Contact</a></li>
         </ul>
       </nav>
     </header>
     <main class="content">
-      <article class="introduction" aria-label="Introducao Do Criador">
+      <article
+        class="introduction"
+        aria-label="Introducao Do Criador"
+        id="home"
+      >
         <div class="introduction-heading">
           <p>
             Olá, sou o <strong>Gustavo</strong><span class="ponto">.</span
