--- a/projeto-portfolio/index.html
+++ b/projeto-portfolio/index.html
@@ -4,19 +4,140 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Projeto feito no curso origamid">
     <link rel="stylesheet" href="./css/style.css" />
     <title>projeto-portfolio</title>
   </head>
   <body>
     <header class="header">
-      <img src="./img/marca.svg" alt="lobo">
+      <img src="./img/marca.svg" alt="lobo" width="104" height="38" >
       <nav>
         <ul class="header-menu">
-          <li><a href="#experiencia">experiência</a></li>
-          <li><a href="#formacao">contato</a></li>
-          <li><a href="#contato">formação</a></li>
+          <li><a href="#experiencia">Experiência</a></li>
+          <li><a href="#formacao">Contato</a></li>
+          <li><a href="#contato">Formação</a></li>
         </ul>
       </nav>
     </header>
+    <main class="introducao">
+      <img src="./img/perfil.jpg" alt="lobo cinza" width="360" height="520">
+      <div>
+        <h1>Desenvolvedor<br> 
+          Front-end &<br> 
+          UX/UI Designer</h1>
+        <p>Localizado em Santa Catarina 🏖</p>
+      </div>
+    </main>
+    <section aria-label="experiencia" class="experiencia" id="experiencia">
+      <h2 class="subtitulo">experiência</h2>
+      <div>
+      <p class="experiencia-texto">
+        Desenvolvo pequenos projetos como o Bikcraft utilizando apenas <strong>HTML</strong>, <strong>Css</strong> e <strong>JavaScript</strong>. 
+        Para aplicativos web como a rede social Dogs eu trabalhei no <strong>UX</strong> e <strong>UI Design</strong> do projeto.
+      </p>
+    <div class="empresa">
+      <span class="empresa-ano">2045</span>
+      <h3 class="empresa-titulo">Bikcraft</h3>
+      <span class="empresa-titulo">Desenvolvedor Junior</span>
+      <p class="empresa-texto">Desenvolvo pequenos projetos como o Bikcraft utilizando apenas HTML, CSS e JavaScript. 
+        Para aplicativos web como a rede social Dogs.</p>
+        <ul class="empresa-habilidades">
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>UX Design</li>
+          <li>Ui Design</li>
+        </ul>
+    </div>
+    <div class="empresa">
+      <span class="empresa-ano">2044-45</span>
+      <h3 class="empresa-titulo">Surftbot</h3>
+      <span class="empresa-titulo">Estagiário</span>
+      <p class="empresa-texto">Desenvolvo pequenos projetos como o Bikcraft utilizando apenas HTML, CSS e JavaScript. 
+        Para aplicativos web como a rede social Dogs.</p>
+        <ul class="empresa-habilidades">
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+        </ul>
+    </div>
+    <div class="empresa">
+      <span class="empresa-ano">2044</span>
+      <h3 class="empresa-titulo">Brafé</h3>
+      <span class="empresa-titulo">Voluntário</span>
+      <p class="empresa-texto">Desenvolvo pequenos projetos como o Bikcraft utilizando apenas HTML, CSS e JavaScript. 
+        Para aplicativos web como a rede social Dogs.</p>
+        <ul class="empresa-habilidades">
+          <li>Email Marketing</li>
+          <li>HTML</li>
+          <li>UX Design</li>
+          <li>Ui Design</li>
+        </ul>
+    </div>
+  </div>
+    </section>
+
+    <section class="formacao" id="formacao" aria-label="formacao">
+
+      <div class="formacao-container">
+        <h2 class="subtitulo">Formação</h2>
+        <div>
+        <p class="formacao-texto">
+          Minha mais recente experiência acadêmica foi o <strong>mestrado</strong> 🎓 que fiz no exterior em <strong>UX Design</strong>. 
+          Além disso me mantenho sempre atualizado com cursos intensivos online.
+        </p>
+        <ul class="faculdade-lista">
+          <li class="faculdade">
+            <span class="faculdade-tipo">bacharel</span>
+            <h3 class="faculdade-curso">Administração de Empresas</h3>
+            <span class="faculdade-instituicao">UFRRJ</span>
+          </li>
+          <li class="faculdade">
+            <span class="faculdade-tipo">tecnólogo</span>
+            <h3 class="faculdade-curso">Design Digital</h3>
+            <span class="faculdade-instituicao">infnet</span>
+          </li>
+          <li class="faculdade">
+            <span class="faculdade-tipo">mestre</span>
+            <h3 class="faculdade-curso">User Experience Design</h3>
+            <span class="faculdade-instituicao">UCLL</span>
+          </li>
+        </ul>
+        <div class="formacao-extra">
+          <div class="cursos">
+            <h3>Cursos Intesivos</h3>
+            <ul>
+              <li>UX Design & Ui Design <span>56h</span></li>
+              <li>Front-End para Iniciantes <span>72h</span></li>
+            </ul>
+          </div>
+          <div class="idiomas">
+            <h3>Idiomas</h3>
+            <ul>
+              <li>Inglês <span>/ Fluente</span></li>
+              <li>Espanhol <span>/ Intermediario</span></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer class="footer" id="Contato">
+      <div class="footer-container">
+        <p class="footer-texto">
+          Estou disponível para novos projetos no momento. 
+          Entre em contato comigo e marcamos uma conversa 👋
+        </p>
+        <ul class="footer-contato">
+          <li>
+            lobo@gmail.com
+          </li>
+          <li>+55 21 9999-9999</li>
+          <li><a href="/">@origamid.cursos</a></li>
+        </ul>
+        <p class="footer-copy">
+          Lobo. Alguns direitos reservados
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
