--- a/projeto-curriculo/index.html
+++ b/projeto-curriculo/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header class="header">
-      <img src="./assets/logo.svg" alt="logo-GustavoAvelar" />
+      <img src="./assets/logo.svg" alt="logo-GustavoAvelar" width="223" height="24"/>
       <nav aria-label="primária">
         <ul class="menu">
           <li><a href="#home">Home</a></li>
@@ -53,6 +53,7 @@
             class="Gustavo"
             src="./img/image-gustavo.png"
             alt="imagem-criador"
+            width="554" height="418"
           />
         </div>
       </article>
@@ -73,10 +74,8 @@
             versátil, onde eu posso criar o que eu quiser,e ainda resolver as
             necessidades das pessoas por meio da tecnologia.
           </p>
-          <button type="button" class="btn-primary">
-            <a href="#">converse comigo</a>
-            <span class="material-symbols-rounded">chevron_right</span>
-          </button>
+            <a href="https://wa.me/5532988130258?text=Olá%20Gostaria%20de%20conversar%20com%20você%20" aria-label="converse-comigo" class="btn-primary">converse comigo <span class="material-symbols-rounded">chevron_right</span></a>
+            
         </article>
       </section>
 
