add: criado a secao de seguros do projeto final

--- a/projeto-final/index.html
+++ b/projeto-final/index.html
@@ -130,7 +130,7 @@
     </article>
     <section class="parceiros" aria-label="nossos parceiros">
       <h2 class="font-1-xxl container">
-        nossos parceiros <span class="cor-p-1">.</span>
+        nossos parceiros<span class="cor-p-1">.</span>
       </h2>
       <ul class="parceiros-lista">
         <li><img src="./img/parceiros/caravan.svg" alt="caravan" /></li>
@@ -161,5 +161,61 @@
         <span class="font-1-m-b cor-p-4">Ana Júlia</span>
       </div>
     </section>
+    <article class="seguros-bg">
+      <div class="seguros container">
+        <h2 class="font-1-xxl cor-0">
+          seguros<span class="cor-p-1">.</span>
+        </h2>
+        <div class="seguros-item">
+          <h3 class="font-1-xl cor-6">
+            PRATA
+          </h3>
+          <span class="font-1-xl cor-0">R$ 199 <span class="font-1-xs cor-6">mensal</span></span>
+          <ul class="seguros-item-lista font-2-m cor-0">
+            <li>
+              Duas trocas por ano
+            </li>
+            <li>
+              Assistência ténica
+            </li>
+            <li>
+              Suporte das 08h às 18h
+            </li>
+            <li>
+              Cobertura estadual
+            </li>
+          </ul>
+          <a class="btn-secondary" href="./orgacamento.html">INSCREVA-SE</a>
+        </div>
+        <div class="seguros-item">
+          <h3 class="font-1-xl cor-p-1">
+            OURO
+          </h3>
+          <span class="font-1-xl cor-0">R$ 299 <span class="font-1-xs cor-6">mensal</span></span>
+          <ul class="seguros-item-lista font-2-m cor-0">
+            <li>
+              Cinco trocas por ano
+            </li>
+            <li>
+              Assistência especial
+            </li>
+            <li>
+              Suporte 24h
+            </li>
+            <li>
+              Cobertura nacional
+            </li>
+            <li>
+              Desconto em parceiros
+            </li>
+            <li>
+              Acesso ao Clube Bikcraft
+            </li>
+          </ul>
+          <a class="btn-primary" href="./orgacamento.html">INSCREVA-SE</a>
+        </div>
+      </div>
+     
+    </article>
   </body>
 </html>
