add: Criada a pagina de bicicletas do projeto final

--- a/projeto-final/index.html
+++ b/projeto-final/index.html
@@ -53,7 +53,7 @@
       </h2>
       <ul class="bicicletas-lista-items">
         <li>
-          <a href="">
+          <a href="./bicicletas/magic.html">
             <img
               src="./img/bicicletas/magic-home.jpg"
               alt="bicicleta-preta-magic"
@@ -63,7 +63,7 @@
           </a>
         </li>
         <li>
-          <a href="">
+          <a href="./bicicletas/nimbus.html">
             <img
               src="./img/bicicletas/nimbus-home.jpg"
               alt="bicicleta-preta-magic"
@@ -73,7 +73,7 @@
           </a>
         </li>
         <li>
-          <a href="">
+          <a href="./bicicletas/nebula.html">
             <img
               src="./img/bicicletas/nebula-home.jpg"
               alt="bicicleta-preta-magic"
