Criando a pagina de contatos do projeto final

--- a/projeto-final/bicicletas/nebula.html
+++ b/projeto-final/bicicletas/nebula.html
@@ -40,7 +40,7 @@
         </div>
       </div>
       <div class="bicicleta container">
-        <div class="bicicletas-imagem">
+        <div class="bicicleta-imagem">
           <img src="../img/bicicleta/nimbus3.jpg" alt="">
           <img src="../img/bicicleta/nimbus1.jpg" alt="">
           <img src="../img/bicicleta/nimbus2.jpg" alt="">
