--- a/projeto-final/contato.html
+++ b/projeto-final/contato.html
@@ -101,6 +101,39 @@
         </section>
       </div>
     </main>
+    <article class="lojas container">
+      <h2 class="font-1-xxl">Lojas Locais<span class="cor-p-1">.</span></h2>
+      <div class="item-loja">
+        <img src="./img/lojas/rj.jpg" alt="mapa marcando a rua do endereco rua ali perto, 25- rj">
+        <div class="lojas-conteudo">
+        <h3 class="font-1-xl cor-12">Rio de Janeiro</h3>
+        <div class="lojas-dados font-2-s cor-8">
+          <p>Rua Ali Perto, 25</p>
+          <p>Rio de janeiro, RJ</p>
+        </div>
+        <div class="lojas-dados font-2-s cor-8">
+          <a href="mailto:rio@bikcraft.com">rio@bikcraft.com</a>
+          <a href="tel:+552199999999">+552199999999</a>
+        </div>
+        <p class="lojas-tempo font-1-s"><img src="./img/icones/horario.svg" alt=""> 08-18h de seg à dom</p>
+      </div>
+    </div>
+      <div class="item-loja">
+      <img src="./img/lojas/sp.jpg" alt="mapa marcando a rua do endereco de sao paulo Rua ali perto">
+      <div class="lojas-conteudo">
+      <h3 class="font-1-xl cor-12">São Paulo</h3>
+      <div class="lojas-dados font-2-s cor-8">
+        <p>Rua Ali Perto, 25</p>
+        <p>São Paulo, SP</p>
+      </div>
+      <div class="lojas-dados font-2-s cor-8">
+        <a href="mailto:sp@bikcraft.com">sp@bikcraft.com</a>
+        <a href="tel:+551199999999">+551199999999</a>
+      </div>
+      <p class="lojas-tempo font-1-s"><img src="./img/icones/horario.svg" alt=""> 08-18h de seg à dom</p>
+    </div>
+  </div>
+    </article>  
     <footer class="footer-bg">
       <div class="footer container">
         <img src="./img/bikcraft.svg" alt="logo" />
