add: Ajuestes finais no projeto final

--- a/projeto-final/index.html
+++ b/projeto-final/index.html
@@ -9,6 +9,7 @@
       content="Bicicletas feitas sob medida. Projeto do curso Origamid"
     />
     <title>Projeto Final Bikcraft</title>
+    <link rel="preload" href="./css/style.css" as="style" />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -20,7 +21,9 @@
   <body>
     <header class="header-bg">
       <div class="header container">
-        <a href="./"><img src="./img/bikcraft.svg" alt="logo" /></a>
+        <a href="./"
+          ><img src="./img/bikcraft.svg" width="136" height="32" alt="logo"
+        /></a>
         <nav aria-label="primária">
           <ul class="header-menu font-1-m cor-0">
             <li><a href="./bicicletas.html">Bicicletas</a></li>
@@ -42,9 +45,18 @@
           </p>
           <a href="./bicicletas.html" class="btn-primary">SELECIONE A SUA</a>
         </div>
-        <div>
-          <img src="./img/fotos/introducao.jpg" alt="bicicleta preta" />
-        </div>
+        <picture>
+          <source
+            media="(max-width: 800px)"
+            srcset="./img/bicicletas/nimbus.jpg"
+          />
+          <img
+            src="./img/fotos/introducao.jpg"
+            width="1280"
+            height="1600"
+            alt="bicicleta preta"
+          />
+        </picture>
       </div>
     </main>
     <article class="bicicletas-lista">
@@ -57,6 +69,8 @@
             <img
               src="./img/bicicletas/magic-home.jpg"
               alt="bicicleta-preta-magic"
+              width="920"
+              height="1040"
             />
             <h3 class="font-1-xl">Magic Might</h3>
             <span class="font-2-m cor-8">R$ 2499</span>
@@ -67,6 +81,8 @@
             <img
               src="./img/bicicletas/nimbus-home.jpg"
               alt="bicicleta-preta-magic"
+              width="920"
+              height="1040"
             />
             <h3 class="font-1-xl">Nimbus Stark</h3>
             <span class="font-2-m cor-8">R$ 4999</span>
@@ -77,6 +93,8 @@
             <img
               src="./img/bicicletas/nebula-home.jpg"
               alt="bicicleta-preta-magic"
+              width="920"
+              height="1040"
             />
             <h3 class="font-1-xl">Nebula Cosmic</h3>
             <span class="font-2-m cor-8">R$ 3999</span>
@@ -102,7 +120,8 @@
           <a class="link" href="./bicicletas.html">Escolha um modelo</a>
           <div class="caracteristicas">
             <div>
-              <img src="./img/icones/eletrica.svg" alt="" />
+              <img src="./img/icones/eletrica.svg" alt=""  width="24"
+              height="24" />
               <h3 class="font-1-m cor-0">Motor Elétrico</h3>
               <p class="font-2-s cor-5">
                 Toda Bikcraft é equipada com um motor elétrico que possui
@@ -111,7 +130,8 @@
               </p>
             </div>
             <div>
-              <img src="./img/icones/rastreador.svg" alt="" />
+              <img src="./img/icones/rastreador.svg" alt=""  width="24"
+              height="24" />
               <h3 class="font-1-m cor-0">Rastreador</h3>
               <p class="font-2-s cor-5">
                 Sabemos o quão preciosa é a sua Bikcraft, por isso adicionamos
@@ -124,6 +144,7 @@
           <img
             src="./img/fotos/tecnologia.jpg"
             alt="imagem-decorativa-ferramentas"
+            width="1200" height="1920"
           />
         </div>
       </div>
@@ -133,14 +154,14 @@
         nossos parceiros<span class="cor-p-1">.</span>
       </h2>
       <ul class="parceiros-lista">
-        <li><img src="./img/parceiros/caravan.svg" alt="caravan" /></li>
-        <li><img src="./img/parceiros/ranek.svg" alt="ranek" /></li>
-        <li><img src="./img/parceiros/handel.svg" alt="handel" /></li>
-        <li><img src="./img/parceiros/dogs.svg" alt="dogs" /></li>
-        <li><img src="./img/parceiros/lescone.svg" alt="lescone" /></li>
-        <li><img src="./img/parceiros/flexblog.svg" alt="flexblog" /></li>
-        <li><img src="./img/parceiros/wildbeast.svg" alt="wildbeast" /></li>
-        <li><img src="./img/parceiros/surfbot.svg" alt="surfbot" /></li>
+        <li><img src="./img/parceiros/caravan.svg" width="140" height="38" alt="caravan" /></li>
+        <li><img src="./img/parceiros/ranek.svg" width="149" height="36" alt="ranek" /></li>
+        <li><img src="./img/parceiros/handel.svg" width="139" height="50" alt="handel" /></li>
+        <li><img src="./img/parceiros/dogs.svg" width="152" height="39" alt="dogs" /></li>
+        <li><img src="./img/parceiros/lescone.svg" width="208" height="41" alt="lescone" /></li>
+        <li><img src="./img/parceiros/flexblog.svg" width="165" height="38" alt="flexblog" /></li>
+        <li><img src="./img/parceiros/wildbeast.svg" width="196" height="34" alt="wildbeast" /></li>
+        <li><img src="./img/parceiros/surfbot.svg" width="200" height="49" alt="surfbot" /></li>
       </ul>
     </section>
     <section class="depoimento" aria-label="depoimento de usuario">
@@ -148,6 +169,7 @@
         <img
           src="./img/fotos/depoimento.jpg"
           alt="mulher andando de bicicleta"
+          width="1560" height="1360"
         />
       </div>
       <div class="depoimento-conteudo container">
@@ -196,7 +218,7 @@
     </article>
     <footer class="footer-bg">
       <div class="footer container">
-        <img src="./img/bikcraft.svg" alt="logo" />
+        <img src="./img/bikcraft.svg" alt="logo" width="136" height="32" />
         <div class="footer-contato">
           <h3 class="font-2-l-b cor-0">Contato</h3>
           <ul class="font-2-m cor-5">
@@ -208,9 +230,27 @@
             <li>Rio de Janeiro - RJ</li>
           </ul>
           <div class="footer-redes">
-            <a href="./"><img src="./img/redes/instagram.svg" alt=Instagram""></a>
-            <a href="./"><img src="./img/redes/facebook.svg" alt="Facebook" /></a>
-            <a href="./"><img src="./img/redes/youtube.svg" alt="Youtube" /></a>
+            <a href="./"
+              ><img
+                src="./img/redes/instagram.svg"
+                alt="Instagram"
+                width="32"
+                height="32"
+            /></a>
+            <a href="./"
+              ><img
+                src="./img/redes/facebook.svg"
+                alt="Facebook"
+                width="32"
+                height="32"
+            /></a>
+            <a href="./"
+              ><img
+                src="./img/redes/youtube.svg"
+                alt="Youtube"
+                width="32"
+                height="32"
+            /></a>
           </div>
         </div>
         <div class="footer-informacoes">
@@ -224,7 +264,9 @@
             </ul>
           </nav>
         </div>
-        <p class="footer-copy font-2-m cor-6">Bikcraft © Alguns direitos reservados.</p>
+        <p class="footer-copy font-2-m cor-6">
+          Bikcraft © Alguns direitos reservados.
+        </p>
       </div>
     </footer>
   </body>
