--- a/projeto-final/bicicletas/nimbus.html
+++ b/projeto-final/bicicletas/nimbus.html
@@ -41,9 +41,9 @@
       </div>
       <div class="bicicleta container">
         <div class="bicicleta-imagem">
-          <img src="../img/bicicleta/nimbus1.jpg" alt="">
-          <img src="../img/bicicleta/nimbus2.jpg" alt="">
-          <img src="../img/bicicleta/nimbus3.jpg" alt="">
+          <img src="../img/bicicleta/nimbus1.jpg" alt="" />
+          <img src="../img/bicicleta/nimbus2.jpg" alt="" />
+          <img src="../img/bicicleta/nimbus3.jpg" alt="" />
         </div>
         <div class="bicicleta-conteudo">
           <p class="font-2-l cor-5">
@@ -62,57 +62,55 @@
               estoques</span
             >
           </div>
-        
-        <div>
-          <h2 class="font-1-xs cor-0">Informações</h2>
-          <ul class="bicicleta-informacoes">
-            <li>
-              <img src="../img/icones/eletrica.svg" alt="" />
-              <h3 class="font-1-m-b cor-0">Motor Elétrico</h3>
-              <p class="font-2-xs cor-5">
-                Permite você viajar distâncias inimagináveis com sua bike.
-              </p>
-            </li>
-            <li>
-              <img src="../img/icones/velocidade.svg" alt="" />
-              <h3 class="font-1-m-b cor-0">40 km/h</h3>
-              <p class="font-2-xs cor-5">
-                A mais rápida bicicleta elétrica disponível hoje no mercado.
-              </p>
-            </li>
-            <li>
-              <img src="../img/icones/rastreador.svg" alt="" />
-              <h3 class="font-1-m-b cor-0">Rastreador</h3>
-              <p class="font-2-xs cor-5">
-                Rastreador e sistema anti-furto para garantir o seu sossego.
-              </p>
-            </li>
-            <li>
-              <img src="../img/icones/carbono.svg" alt="" />
-              <h3 class="font-1-m-b cor-0">Fibra de Carbono</h3>
-              <p class="font-2-xs cor-5">
-                Maior proteção possível para a sua Bikcraft com fibra de
-                carbono.
-              </p>
-            </li>
-          </ul>
-          <h2 class="font-1-xs cor-0">Ficha Técnica</h2>
-          <ul class="bicicleta-ficha font-2-xs cor-4">
-            <li>Peso<span>9kg</span></li>
-            <li>Altura<span>60cm</span></li>
-            <li>Largura<span>120cm</span></li>
-            <li>Profundidade<span>10cm</span></li>
-            <li>Marchas<span>16</span></li>
-            <li>Roda<span>29</span></li>
-          </ul>
-        </div>
+
+          <div>
+            <h2 class="font-1-xs cor-0">Informações</h2>
+            <ul class="bicicleta-informacoes">
+              <li>
+                <img src="../img/icones/eletrica.svg" alt="" />
+                <h3 class="font-1-m-b cor-0">Motor Elétrico</h3>
+                <p class="font-2-xs cor-5">
+                  Permite você viajar distâncias inimagináveis com sua bike.
+                </p>
+              </li>
+              <li>
+                <img src="../img/icones/velocidade.svg" alt="" />
+                <h3 class="font-1-m-b cor-0">40 km/h</h3>
+                <p class="font-2-xs cor-5">
+                  A mais rápida bicicleta elétrica disponível hoje no mercado.
+                </p>
+              </li>
+              <li>
+                <img src="../img/icones/rastreador.svg" alt="" />
+                <h3 class="font-1-m-b cor-0">Rastreador</h3>
+                <p class="font-2-xs cor-5">
+                  Rastreador e sistema anti-furto para garantir o seu sossego.
+                </p>
+              </li>
+              <li>
+                <img src="../img/icones/carbono.svg" alt="" />
+                <h3 class="font-1-m-b cor-0">Fibra de Carbono</h3>
+                <p class="font-2-xs cor-5">
+                  Maior proteção possível para a sua Bikcraft com fibra de
+                  carbono.
+                </p>
+              </li>
+            </ul>
+            <h2 class="font-1-xs cor-0">Ficha Técnica</h2>
+            <ul class="bicicleta-ficha font-2-xs cor-4">
+              <li>Peso<span>9kg</span></li>
+              <li>Altura<span>60cm</span></li>
+              <li>Largura<span>120cm</span></li>
+              <li>Profundidade<span>10cm</span></li>
+              <li>Marchas<span>16</span></li>
+              <li>Roda<span>29</span></li>
+            </ul>
+          </div>
         </div>
       </div>
     </main>
     <article class="bicicletas-lista container">
-      <h2 class="font-1-xxl ">
-        escolha a sua <span class="cor-p-1">.</span>
-      </h2>
+      <h2 class="font-1-xxl">escolha a sua <span class="cor-p-1">.</span></h2>
       <ul class="bicicletas-lista-items">
         <li>
           <a href="./magic.html">
@@ -139,15 +137,22 @@
     <article class="bicicleta-seguro-bg">
       <div class="bicicleta-seguro container">
         <div class="bicicleta-seguro-imagem">
-          <img src="../img/fotos//seguros.jpg" alt="pessoa em cima de uma bicicleta">
+          <img
+            src="../img/fotos//seguros.jpg"
+            alt="pessoa em cima de uma bicicleta"
+          />
         </div>
-          <div class="bicicleta-seguro-conteudo">
-            <h2 class="font-1-xxl cor-0">Pedale mais tranquilo com o nosso <span class="cor-p-1">seguro.</span></h2>
-            <p class="font-2-l cor-5">
-              Inscreva-se em um dos planos do nosso seguro Bikcraft e aproveite diversos benefícios.
-            </p>
-            <a class="btn-primary"href="../seguros.html">CONHEÇA MAIS</a>
-          </div>  
+        <div class="bicicleta-seguro-conteudo">
+          <h2 class="font-1-xxl cor-0">
+            Pedale mais tranquilo com o nosso
+            <span class="cor-p-1">seguro.</span>
+          </h2>
+          <p class="font-2-l cor-5">
+            Inscreva-se em um dos planos do nosso seguro Bikcraft e aproveite
+            diversos benefícios.
+          </p>
+          <a class="btn-primary" href="../seguros.html">CONHEÇA MAIS</a>
+        </div>
       </div>
     </article>
     <footer class="footer-bg">
@@ -165,13 +170,25 @@
           </ul>
           <div class="footer-redes">
             <a href="./"
-              ><img src="../img/redes/instagram.svg" alt=Instagram""></a
-            >
-            <a href="./"
-              ><img src="../img/redes/facebook.svg" alt="Facebook"
+              ><img
+                src="../img/redes/instagram.svg"
+                alt="Instagram"
+                width="32"
+                height="32"
             /></a>
             <a href="./"
-              ><img src="../img/redes/youtube.svg" alt="Youtube"
+              ><img
+                src="../img/redes/facebook.svg"
+                alt="Facebook"
+                width="32"
+                height="32"
+            /></a>
+            <a href="./"
+              ><img
+                src="../img/redes/youtube.svg"
+                alt="Youtube"
+                width="32"
+                height="32"
             /></a>
           </div>
         </div>
