--- a/projeto-final/contato.html
+++ b/projeto-final/contato.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Contato Bikcraft" />
     <title>Contato | Bikcraft</title>
+    <link rel="preload" href="./css/style.css" as="style" />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -17,7 +18,9 @@
   <body id="contato">
     <header class="header-bg">
       <div class="header container">
-        <a href="./"><img src="./img/bikcraft.svg" alt="logo" /></a>
+        <a href="./"
+          ><img src="./img/bikcraft.svg" alt="logo" width="136" height="32"
+        /></a>
         <nav aria-label="primária">
           <ul class="header-menu font-1-m cor-0">
             <li><a href="./bicicletas.html">Bicicletas</a></li>
@@ -53,13 +56,25 @@
           </address>
           <div class="contato-redes">
             <a href="./"
-              ><img src="./img/redes/instagram-p.svg" alt=Instagram""></a
-            >
-            <a href="./"
-              ><img src="./img/redes/facebook-p.svg" alt="Facebook"
+              ><img
+                src="./img/redes/instagram-p.svg"
+                alt="Instagram"
+                width="32"
+                height="32"
             /></a>
             <a href="./"
-              ><img src="./img/redes/youtube-p.svg" alt="Youtube"
+              ><img
+                src="./img/redes/facebook-p.svg"
+                alt="Facebook"
+                width="32"
+                height="32"
+            /></a>
+            <a href="./"
+              ><img
+                src="./img/redes/youtube-p.svg"
+                alt="Youtube"
+                width="32"
+                height="32"
             /></a>
           </div>
         </section>
@@ -96,7 +111,9 @@
                 placeholder="O que você precisa?"
               ></textarea>
             </div>
-            <button type="button" class="btn-primary col-2">Enviar Mensagem</button>
+            <button type="button" class="btn-primary col-2">
+              Enviar Mensagem
+            </button>
           </form>
         </section>
       </div>
@@ -104,39 +121,53 @@
     <article class="lojas container">
       <h2 class="font-1-xxl">Lojas Locais<span class="cor-p-1">.</span></h2>
       <div class="item-loja">
-        <img src="./img/lojas/rj.jpg" alt="mapa marcando a rua do endereco rua ali perto, 25- rj">
+        <img
+          src="./img/lojas/rj.jpg"
+          alt="mapa marcando a rua do endereco rua ali perto, 25- rj"
+          width="1120"
+          height="520"
+        />
         <div class="lojas-conteudo">
-        <h3 class="font-1-xl cor-12">Rio de Janeiro</h3>
-        <div class="lojas-dados font-2-s cor-8">
-          <p>Rua Ali Perto, 25</p>
-          <p>Rio de janeiro, RJ</p>
+          <h3 class="font-1-xl cor-12">Rio de Janeiro</h3>
+          <div class="lojas-dados font-2-s cor-8">
+            <p>Rua Ali Perto, 25</p>
+            <p>Rio de janeiro, RJ</p>
+          </div>
+          <div class="lojas-dados font-2-s cor-8">
+            <a href="mailto:rio@bikcraft.com">rio@bikcraft.com</a>
+            <a href="tel:+552199999999">+552199999999</a>
+          </div>
+          <p class="lojas-tempo font-1-s">
+            <img src="./img/icones/horario.svg" alt="" /> 08-18h de seg à dom
+          </p>
         </div>
-        <div class="lojas-dados font-2-s cor-8">
-          <a href="mailto:rio@bikcraft.com">rio@bikcraft.com</a>
-          <a href="tel:+552199999999">+552199999999</a>
-        </div>
-        <p class="lojas-tempo font-1-s"><img src="./img/icones/horario.svg" alt=""> 08-18h de seg à dom</p>
       </div>
-    </div>
       <div class="item-loja">
-      <img src="./img/lojas/sp.jpg" alt="mapa marcando a rua do endereco de sao paulo Rua ali perto">
-      <div class="lojas-conteudo">
-      <h3 class="font-1-xl cor-12">São Paulo</h3>
-      <div class="lojas-dados font-2-s cor-8">
-        <p>Rua Ali Perto, 25</p>
-        <p>São Paulo, SP</p>
+        <img
+          src="./img/lojas/sp.jpg"
+          alt="mapa marcando a rua do endereco de sao paulo Rua ali perto"
+          width="1120"
+          height="520"
+        />
+        <div class="lojas-conteudo">
+          <h3 class="font-1-xl cor-12">São Paulo</h3>
+          <div class="lojas-dados font-2-s cor-8">
+            <p>Rua Ali Perto, 25</p>
+            <p>São Paulo, SP</p>
+          </div>
+          <div class="lojas-dados font-2-s cor-8">
+            <a href="mailto:sp@bikcraft.com">sp@bikcraft.com</a>
+            <a href="tel:+551199999999">+551199999999</a>
+          </div>
+          <p class="lojas-tempo font-1-s">
+            <img src="./img/icones/horario.svg" alt="" /> 08-18h de seg à dom
+          </p>
+        </div>
       </div>
-      <div class="lojas-dados font-2-s cor-8">
-        <a href="mailto:sp@bikcraft.com">sp@bikcraft.com</a>
-        <a href="tel:+551199999999">+551199999999</a>
-      </div>
-      <p class="lojas-tempo font-1-s"><img src="./img/icones/horario.svg" alt=""> 08-18h de seg à dom</p>
-    </div>
-  </div>
-    </article>  
+    </article>
     <footer class="footer-bg">
       <div class="footer container">
-        <img src="./img/bikcraft.svg" alt="logo" />
+        <img src="./img/bikcraft.svg" alt="logo" width="136" height="32" />
         <div class="footer-contato">
           <h3 class="font-2-l-b cor-0">Contato</h3>
           <ul class="font-2-m cor-5">
@@ -149,12 +180,26 @@
           </ul>
           <div class="footer-redes">
             <a href="./"
-              ><img src="./img/redes/instagram.svg" alt=Instagram""></a
-            >
-            <a href="./"
-              ><img src="./img/redes/facebook.svg" alt="Facebook"
+              ><img
+                src="./img/redes/instagram.svg"
+                alt="Instagram"
+                width="32"
+                height="32"
             /></a>
-            <a href="./"><img src="./img/redes/youtube.svg" alt="Youtube" /></a>
+            <a href="./"
+              ><img
+                src="./img/redes/facebook.svg"
+                alt="Facebook"
+                width="32"
+                height="32"
+            /></a>
+            <a href="./"
+              ><img
+                src="./img/redes/youtube.svg"
+                alt="Youtube"
+                width="32"
+                height="32"
+            /></a>
           </div>
         </div>
         <div class="footer-informacoes">
