--- a/projeto-final/seguros.html
+++ b/projeto-final/seguros.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Seguros Bikcraft" />
     <title>Seguros | Bikcraft</title>
+    <link rel="preload" href="./css/style.css" as="style" />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -17,7 +18,9 @@
   <body id="seguros">
     <header class="header-bg">
       <div class="header container">
-        <a href="./"><img src="./img/bikcraft.svg" alt="logo" /></a>
+        <a href="./"
+          ><img src="./img/bikcraft.svg" alt="logo" width="136" height="32"
+        /></a>
         <nav aria-label="primária">
           <ul class="header-menu font-1-m cor-0">
             <li><a href="./bicicletas.html">Bicicletas</a></li>
@@ -74,7 +77,12 @@
         </h2>
         <ul>
           <li>
-            <img src="./img/icones/eletrica.svg" alt="" />
+            <img
+              src="./img/icones/eletrica.svg"
+              alt=""
+              width="32"
+              height="32"
+            />
             <h3 class="font-1-l cor-0">Reparo Elétrico</h3>
             <p class="font-2-s cor-5">
               Garantimos o reparo completo do seu motor em caso de falhas.
@@ -82,7 +90,7 @@
             </p>
           </li>
           <li>
-            <img src="./img/icones/carbono.svg" alt="" />
+            <img src="./img/icones/carbono.svg" alt="" width="32" height="32" />
             <h3 class="font-1-l cor-0">Fibra de Carbono</h3>
             <p class="font-2-s cor-5">
               Nossos quadros são feitos para durar para sempre. M as caso algo
@@ -90,7 +98,12 @@
             </p>
           </li>
           <li>
-            <img src="./img/icones/sustentavel.svg" alt="" />
+            <img
+              src="./img/icones/sustentavel.svg"
+              alt=""
+              width="32"
+              height="32"
+            />
             <h3 class="font-1-l cor-0">Sustentável</h3>
             <p class="font-2-s cor-5">
               Trabalhamos com a filosofia de desperdício zero. Qualquer parte
@@ -98,7 +111,12 @@
             </p>
           </li>
           <li>
-            <img src="./img/icones/rastreador.svg" alt="" />
+            <img
+              src="./img/icones/rastreador.svg"
+              alt=""
+              width="32"
+              height="32"
+            />
             <h3 class="font-1-l cor-0">Recuperação</h3>
             <p class="font-2-s cor-5">
               A sua Bikcraft ficará pronta para uso no mesmo dia, caso você
@@ -106,7 +124,7 @@
             </p>
           </li>
           <li>
-            <img src="./img/icones/seguro.svg" alt="" />
+            <img src="./img/icones/seguro.svg" alt="" width="32" height="32" />
             <h3 class="font-1-l cor-0">Segurança</h3>
             <p class="font-2-s cor-5">
               A sua Bikcraft ficará pronta para uso no mesmo dia, caso você
@@ -114,7 +132,12 @@
             </p>
           </li>
           <li>
-            <img src="./img/icones/velocidade.svg" alt="" />
+            <img
+              src="./img/icones/velocidade.svg"
+              alt=""
+              width="32"
+              height="32"
+            />
             <h3 class="font-1-l cor-0">Rapidez</h3>
             <p class="font-2-s cor-5">
               A sua Bikcraft ficará pronta para uso no mesmo dia, caso você
@@ -183,7 +206,7 @@
     </article>
     <footer class="footer-bg">
       <div class="footer container">
-        <img src="./img/bikcraft.svg" alt="logo" />
+        <img src="./img/bikcraft.svg" alt="logo" width="136" height="32" />
         <div class="footer-contato">
           <h3 class="font-2-l-b cor-0">Contato</h3>
           <ul class="font-2-m cor-5">
@@ -196,12 +219,26 @@
           </ul>
           <div class="footer-redes">
             <a href="./"
-              ><img src="./img/redes/instagram.svg" alt=Instagram""></a
-            >
-            <a href="./"
-              ><img src="./img/redes/facebook.svg" alt="Facebook"
+              ><img
+                src="./img/redes/instagram.svg"
+                alt="Instagram"
+                width="32"
+                height="32"
             /></a>
-            <a href="./"><img src="./img/redes/youtube.svg" alt="Youtube" /></a>
+            <a href="./"
+              ><img
+                src="./img/redes/facebook.svg"
+                alt="Facebook"
+                width="32"
+                height="32"
+            /></a>
+            <a href="./"
+              ><img
+                src="./img/redes/youtube.svg"
+                alt="Youtube"
+                width="32"
+                height="32"
+            /></a>
           </div>
         </div>
         <div class="footer-informacoes">
