--- a/projeto-final/termos.html
+++ b/projeto-final/termos.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Termos e condições Bikcraft">
   <title>Termos e Condições | Bikcraft</title>
-  <link rel="stylesheet" href="./css/style.css" />
+     <link rel="preload" href="./css/style.css" as="style">
+    <link rel="stylesheet" href="./css/style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
@@ -17,7 +18,7 @@
 <body id="termos">
   <header class="header-bg">
     <div class="header container">
-      <a href="./"><img src="./img/bikcraft.svg" alt="logo" /></a>
+      <a href="./"><img src="./img/bikcraft.svg" alt="logo" width="136" height="32" /></a>
       <nav aria-label="primária">
         <ul class="header-menu font-1-m cor-0">
           <li><a href="./bicicletas.html">Bicicletas</a></li>
@@ -78,7 +79,7 @@
   </main>
   <footer class="footer-bg">
     <div class="footer container">
-      <img src="./img/bikcraft.svg" alt="logo" />
+      <img src="./img/bikcraft.svg" alt="logo" width="136" height="32" />
       <div class="footer-contato">
         <h3 class="font-2-l-b cor-0">Contato</h3>
         <ul class="font-2-m cor-5">
@@ -90,9 +91,12 @@
           <li>Rio de Janeiro - RJ</li>
         </ul>
         <div class="footer-redes">
-          <a href="./"><img src="./img/redes/instagram.svg" alt=Instagram""></a>
-          <a href="./"><img src="./img/redes/facebook.svg" alt="Facebook" /></a>
-          <a href="./"><img src="./img/redes/youtube.svg" alt="Youtube" /></a>
+          <a href="./"><img src="./img/redes/instagram.svg" alt="Instagram" width="32"
+            height="32" /></a>
+          <a href="./"><img src="./img/redes/facebook.svg" alt="Facebook" width="32"
+            height="32" /></a>
+          <a href="./"><img src="./img/redes/youtube.svg" alt="Youtube" width="32"
+            height="32" /></a>
         </div>
       </div>
       <div class="footer-informacoes">
