add: finalizando o projeto final

--- a/projeto-final/orcamento.html
+++ b/projeto-final/orcamento.html
@@ -180,7 +180,12 @@
                   <img src="./img/icones/rastreador.svg" alt="" /> Rastreador
                 </li>
               </ul>
-              <img src="./img/bicicletas/nebula.jpg" alt="Bicicleta preta" />
+              <img
+                src="./img/bicicletas/nebula.jpg"
+                alt="Bicicleta preta"
+                width="1120"
+                height="680"
+              />
             </div>
           </div>
 
@@ -243,7 +248,9 @@
             <label for="estado">Estado</label>
             <input type="text" id="estado" name="estado" />
           </div>
-          <button class="btn-primary col-2">Solicitar Orçamento</button>
+          <button type="button" class="btn-primary col-2">
+            Solicitar Orçamento
+          </button>
         </div>
       </form>
     </main>
