add: javascript no projeto final

--- a/javascript/index.html
+++ b/javascript/index.html
@@ -16,7 +16,8 @@
         <li><a href="./contato.html">contato</a></li>
       </ul>
     </nav>
-    <script src="./script.js">
-    </script>
+    <script src="./script.js"></script>
+    <script src="./js/script.js"></script>
   </body>
+  >
 </html>
