--- a/projeto-final/bicicletas/nimbus.html
+++ b/projeto-final/bicicletas/nimbus.html
@@ -31,7 +31,7 @@
       </div>
     </header>
     <main class="titulo-bg">
-      <div class="titulo-bg">
+      <div>
         <div class="container">
           <p class="font-2-l-b cor-5">R$ 4999</p>
           <h1 class="font-1-xxl cor-0">
@@ -52,7 +52,7 @@
             velocidade.
           </p>
           <div class="bicicleta-comprar">
-            <a class="btn-primary" href="../orcamento.html">COMPRAR AGORA</a>
+            <a class="btn-primary" href="../orcamento.html?tipo=bikcraft&produto=magic">COMPRAR AGORA</a>
             <span class="font-1-xd cor-6"
               ><img src="../img/icones/entrega.svg" alt="" /> entrega em 5
               dias</span
@@ -208,5 +208,7 @@
         </p>
       </div>
     </footer>
+    <script src="../js/script.js"></script>
   </body>
+  >
 </html>
