--- a/javascript/contato.html
+++ b/javascript/contato.html
@@ -17,5 +17,7 @@
       </ul>
     </nav>
     <script src="./script.js"></script>
+    <script src="./js/script.js"></script>
   </body>
+  >
 </html>
