--- a/projeto-final/bicicletas.html
+++ b/projeto-final/bicicletas.html
@@ -160,7 +160,12 @@
       <div class="bicicletas-bg">
         <div class="bicicletas container">
           <div class="bicicletas-imagem">
-            <img src="./img/bicicletas/nebula.jpg" alt="bicicleta preta" width="1120" height="680"/>
+            <img
+              src="./img/bicicletas/nebula.jpg"
+              alt="bicicleta preta"
+              width="1120"
+              height="680"
+            />
             <span class="font-2-m cor-0">R$3999</span>
           </div>
           <div class="bicicletas-conteudo">
@@ -268,5 +273,7 @@
         </p>
       </div>
     </footer>
+    <script src="./js/script.js"></script>
   </body>
+  >
 </html>
