--- a/projeto-final/bicicletas/magic.html
+++ b/projeto-final/bicicletas/magic.html
@@ -52,7 +52,7 @@
             velocidade.
           </p>
           <div class="bicicleta-comprar">
-            <a class="btn-primary" href="../orcamento.html">COMPRAR AGORA</a>
+            <a class="btn-primary" href="../orcamento.html?tipo=bikcraft&produto=magic">COMPRAR AGORA</a>
             <span class="font-1-xd cor-6"
               ><img src="../img/icones/entrega.svg" alt="" /> entrega em 5
               dias</span
@@ -208,5 +208,7 @@
         </p>
       </div>
     </footer>
+    <script src="../js/script.js"></script>
   </body>
+  >
 </html>
