--- a/projeto-final/seguros.html
+++ b/projeto-final/seguros.html
@@ -51,7 +51,11 @@
             <li>Suporte das 08h às 18h</li>
             <li>Cobertura estadual</li>
           </ul>
-          <a class="btn-secondary" href="./orgacamento.html">INSCREVA-SE</a>
+          <a
+            class="btn-secondary"
+            href="./orcamento.html?tipo=seguro&produto=prata"
+            >INSCREVA-SE</a
+          >
         </div>
         <div class="seguros-item">
           <h3 class="font-1-xl cor-p-1">OURO</h3>
@@ -66,7 +70,11 @@
             <li>Desconto em parceiros</li>
             <li>Acesso ao Clube Bikcraft</li>
           </ul>
-          <a class="btn-primary" href="./orgacamento.html">INSCREVA-SE</a>
+          <a
+            class="btn-primary"
+            href="./orcamento.html?tipo=seguro&produto=ouro"
+            >INSCREVA-SE</a
+          >
         </div>
       </div>
     </main>
@@ -153,50 +161,49 @@
       </h2>
       <dl>
         <div>
-          <dt class="font-1-m-b">Qual forma de pagamento vocês aceitam?</dt>
-          <dd class="font-2-s cor-9">
+          <dt ><button class="font-1-m-b" type="button" aria-controls="pergunta1" aria-expanded="true">Qual forma de pagamento vocês aceitam?</button></dt>
+          <dd id="pergunta1" class="font-2-s cor-9 ativa">
             Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO
             e American Express. Para pagamentos à vista também aceitarmos PIX e
             Boleto através do PagSeguro.
           </dd>
         </div>
         <div>
-          <dt class="font-1-m-b">Como posso entrar em contato?</dt>
-          <dd class="font-2-s cor-9">
+          
+          <dt ><button class="font-1-m-b" type="button" aria-controls="pergunta2" aria-expanded="false">Como posso entrar em contato?</button></dt>
+          <dd id="pergunta2" class="font-2-s cor-9">
             Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO
             e American Express. Para pagamentos à vista também aceitarmos PIX e
             Boleto através do PagSeguro.
           </dd>
         </div>
         <div>
-          <dt class="font-1-m-b">Vocês possuem algum desconto?</dt>
-          <dd class="font-2-s cor-9">
+          <dt ><button class="font-1-m-b" type="button" aria-controls="pergunta3" aria-expanded="false">Vocês possuem algum desconto?</button></dt>
+          <dd id="pergunta3" class="font-2-s cor-9">
             Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO
             e American Express. Para pagamentos à vista também aceitarmos PIX e
             Boleto através do PagSeguro.
           </dd>
         </div>
         <div>
-          <dt class="font-1-m-b">Posso parcelar no boleto?</dt>
-          <dd class="font-2-s cor-9">
+          <dt ><button class="font-1-m-b" type="button" aria-controls="pergunta4" aria-expanded="false">Posso parcelar no boleto?</button></dt>
+          <dd id="pergunta4" class="font-2-s cor-9">
             Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO
             e American Express. Para pagamentos à vista também aceitarmos PIX e
             Boleto através do PagSeguro.
           </dd>
         </div>
         <div>
-          <dt class="font-1-m-b">Quantas trocas posso fazer ao ano?</dt>
-          <dd class="font-2-s cor-9">
+          <dt ><button class="font-1-m-b" type="button" aria-controls="pergunta5" aria-expanded="false">Quantas trocas por ano posso fazer?</button></dt>
+          <dd id="pergunta5" class="font-2-s cor-9">
             Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO
             e American Express. Para pagamentos à vista também aceitarmos PIX e
             Boleto através do PagSeguro.
           </dd>
         </div>
         <div>
-          <dt class="font-1-m-b">
-            Qual Bikcraft devo escolher para o meu tamanho?
-          </dt>
-          <dd class="font-2-s cor-9">
+          <dt ><button class="font-1-m-b" type="button" aria-controls="pergunta6" aria-expanded="false">Qual bicicleta devo escolher pelo meu tamanho?</button></dt>
+          <dd id="pergunta6" class="font-2-s cor-9">
             Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO
             e American Express. Para pagamentos à vista também aceitarmos PIX e
             Boleto através do PagSeguro.
@@ -257,5 +264,7 @@
         </p>
       </div>
     </footer>
+    <script src="./js/script.js"></script>
   </body>
+  >
 </html>
