add: adicionado o favicon á pasta

--- a/cinema-projeto/estados/rio-de-janeiro.html
+++ b/cinema-projeto/estados/rio-de-janeiro.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../style.css" />
     <title>Rio de Janeiro</title>
+    <script>
+      document.documentElement.classList.add("js");
+    </script>
   </head>
   <body>
     <a href="../index.html">voltar</a>
