--- a/javascript/javascript-galeria/index.html
+++ b/javascript/javascript-galeria/index.html
@@ -7,6 +7,9 @@
     <meta name="description" content="Galeria de bicicletas" />
     <link rel="stylesheet" href="./style.css" />
     <title>Galeria de Bicicletas</title>
+    <script>
+      document.documentElement.classList.add("js");
+    </script>
   </head>
   <body>
     <div id="galeria">
