--- a/projeto-final/bicicletas.html
+++ b/projeto-final/bicicletas.html
@@ -14,6 +14,9 @@
       rel="stylesheet"
     />
     <title>Bicicletas | Bikcraft</title>
+    <script>
+      document.documentElement.classList.add("js");
+    </script>
   </head>
   <body id="bicicletas">
     <header class="header-bg">
