--- a/projeto-portfolio/index.html
+++ b/projeto-portfolio/index.html
@@ -7,6 +7,9 @@
     <meta name="description" content="Projeto feito no curso origamid">
     <link rel="stylesheet" href="./css/style.min.css" />
     <title>projeto-portfolio</title>
+   <script>
+      document.documentElement.classList.add('js');
+    </script>
   </head>
   <body>
     <header class="header">
