--- a/07-projeto-portfolio/0710-footer/portfolio/index.html
+++ b/07-projeto-portfolio/0710-footer/portfolio/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lobo - Desenvolvedor e Designer</title>
     <link rel="stylesheet" href="./css/style.css" />
+    <script>
+      document.documentElement.classList.add("js");
+    </script>
   </head>
 
   <body>
