--- a/07-projeto-portfolio/0711-otimizacoes/portfolio/index.html
+++ b/07-projeto-portfolio/0711-otimizacoes/portfolio/index.html
@@ -9,6 +9,9 @@
       content="Desenvolvedor Front End e UX/UI Designer Localizado no Rio de Janeiro"
     />
     <link rel="stylesheet" href="./css/style.css" />
+    <script>
+      document.documentElement.classList.add("js");
+    </script>
   </head>
 
   <body>
