--- a/display-projeto/index.html
+++ b/display-projeto/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <title>Carros e Bicicletas</title>
+    <script>
+      document.documentElement.classList.add("js");
+    </script>
   </head>
   <body>
     <h1>Carros e Bicicletas</h1>
