--- a/javascript/index.html
+++ b/javascript/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Site para teste de javascript" />
     <title>Javascript</title>
+    <script>
+      document.documentElement.classList.add("js");
+    </script>
   </head>
   <body>
     <h1 id="teste">Teste</h1>
