--- a/projeto-curriculo/index.html
+++ b/projeto-curriculo/index.html
@@ -10,6 +10,9 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
     <title>Portfolio</title>
+    <script>
+      document.documentElement.classList.add("js");
+    </script>
   </head>
   <body>
     <header class="header">
