--- a/projeto-final/bicicletas/nimbus.html
+++ b/projeto-final/bicicletas/nimbus.html
@@ -16,6 +16,9 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap"
       rel="stylesheet"
     />
+    <script>
+      document.documentElement.classList.add("js");
+    </script>
   </head>
   <body id="bicicleta">
     <header class="header-bg">
@@ -52,7 +55,11 @@
             velocidade.
           </p>
           <div class="bicicleta-comprar">
-            <a class="btn-primary" href="../orcamento.html?tipo=bikcraft&produto=magic">COMPRAR AGORA</a>
+            <a
+              class="btn-primary"
+              href="../orcamento.html?tipo=bikcraft&produto=magic"
+              >COMPRAR AGORA</a
+            >
             <span class="font-1-xd cor-6"
               ><img src="../img/icones/entrega.svg" alt="" /> entrega em 5
               dias</span
