--- a/projeto-final/seguros.html
+++ b/projeto-final/seguros.html
@@ -14,6 +14,9 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap"
       rel="stylesheet"
     />
+    <script>
+      document.documentElement.classList.add("js");
+    </script>
   </head>
   <body id="seguros">
     <header class="header-bg">
@@ -161,7 +164,16 @@
       </h2>
       <dl>
         <div>
-          <dt ><button class="font-1-m-b" type="button" aria-controls="pergunta1" aria-expanded="true">Qual forma de pagamento vocês aceitam?</button></dt>
+          <dt>
+            <button
+              class="font-1-m-b"
+              type="button"
+              aria-controls="pergunta1"
+              aria-expanded="true"
+            >
+              Qual forma de pagamento vocês aceitam?
+            </button>
+          </dt>
           <dd id="pergunta1" class="font-2-s cor-9 ativa">
             Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO
             e American Express. Para pagamentos à vista também aceitarmos PIX e
@@ -169,8 +181,16 @@
           </dd>
         </div>
         <div>
-          
-          <dt ><button class="font-1-m-b" type="button" aria-controls="pergunta2" aria-expanded="false">Como posso entrar em contato?</button></dt>
+          <dt>
+            <button
+              class="font-1-m-b"
+              type="button"
+              aria-controls="pergunta2"
+              aria-expanded="false"
+            >
+              Como posso entrar em contato?
+            </button>
+          </dt>
           <dd id="pergunta2" class="font-2-s cor-9">
             Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO
             e American Express. Para pagamentos à vista também aceitarmos PIX e
@@ -178,7 +198,16 @@
           </dd>
         </div>
         <div>
-          <dt ><button class="font-1-m-b" type="button" aria-controls="pergunta3" aria-expanded="false">Vocês possuem algum desconto?</button></dt>
+          <dt>
+            <button
+              class="font-1-m-b"
+              type="button"
+              aria-controls="pergunta3"
+              aria-expanded="false"
+            >
+              Vocês possuem algum desconto?
+            </button>
+          </dt>
           <dd id="pergunta3" class="font-2-s cor-9">
             Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO
             e American Express. Para pagamentos à vista também aceitarmos PIX e
@@ -186,7 +215,16 @@
           </dd>
         </div>
         <div>
-          <dt ><button class="font-1-m-b" type="button" aria-controls="pergunta4" aria-expanded="false">Posso parcelar no boleto?</button></dt>
+          <dt>
+            <button
+              class="font-1-m-b"
+              type="button"
+              aria-controls="pergunta4"
+              aria-expanded="false"
+            >
+              Posso parcelar no boleto?
+            </button>
+          </dt>
           <dd id="pergunta4" class="font-2-s cor-9">
             Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO
             e American Express. Para pagamentos à vista também aceitarmos PIX e
@@ -194,7 +232,16 @@
           </dd>
         </div>
         <div>
-          <dt ><button class="font-1-m-b" type="button" aria-controls="pergunta5" aria-expanded="false">Quantas trocas por ano posso fazer?</button></dt>
+          <dt>
+            <button
+              class="font-1-m-b"
+              type="button"
+              aria-controls="pergunta5"
+              aria-expanded="false"
+            >
+              Quantas trocas por ano posso fazer?
+            </button>
+          </dt>
           <dd id="pergunta5" class="font-2-s cor-9">
             Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO
             e American Express. Para pagamentos à vista também aceitarmos PIX e
@@ -202,7 +249,16 @@
           </dd>
         </div>
         <div>
-          <dt ><button class="font-1-m-b" type="button" aria-controls="pergunta6" aria-expanded="false">Qual bicicleta devo escolher pelo meu tamanho?</button></dt>
+          <dt>
+            <button
+              class="font-1-m-b"
+              type="button"
+              aria-controls="pergunta6"
+              aria-expanded="false"
+            >
+              Qual bicicleta devo escolher pelo meu tamanho?
+            </button>
+          </dt>
           <dd id="pergunta6" class="font-2-s cor-9">
             Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO
             e American Express. Para pagamentos à vista também aceitarmos PIX e
